--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,23 +1,11 @@
 {
-  "compileOnSave": false,
   "compilerOptions": {
-    "declaration": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "mapRoot": "/",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "noEmitOnError": true,
-    "noImplicitAny": false,
-    "outDir": "../dist/",
-    "rootDir": ".",
-    "sourceMap": true,
     "target": "es5",
-    "inlineSources": true
+    "sourceMap": true,
+    "experimentalDecorators": true,
+    "module": "commonjs"
   },
-
-  "files": [
-    "main.ts",
-    "typings.d.ts"
+  "exclude": [
+    "node_modules"
   ]
 }
