--- a/package.json
+++ b/package.json
@@ -11,44 +11,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/forms": "2.0.0-rc.6",
-    "@angular/http": "2.0.0-rc.6",
-    "@angular/platform-browser": "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
-    "@angular/router": "3.0.0-rc.2",
-    "reflect-metadata": "^0.1.8",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/router": "3.0.0",
     "core-js": "2.4.1",
-    "rxjs": "5.0.0-beta.11",
-    "zone.js": "^0.6.17"
+    "font-awesome": "^4.6.3",
+    "primeng": "^1.0.0-beta.16",
+    "reflect-metadata": "0.1.8",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "angular2-template-loader": "0.5.0",
-    "css-loader": "0.24.0",
+    "css-loader": "0.25.0",
     "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "^0.9.0",
-    "html-loader": "0.4.3",
+    "file-loader": "0.9.0",
+    "html-loader": "0.4.4",
     "html-webpack-plugin": "2.22.0",
-    "jasmine-core": "2.5.0",
-    "karma": "1.2.0",
+    "jasmine-core": "2.5.2",
+    "karma": "1.3.0",
     "karma-jasmine": "1.0.2",
-    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-phantomjs-launcher": "1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.8.0",
-    "null-loader": "^0.1.1",
+    "null-loader": "0.1.1",
     "phantomjs-prebuilt": "2.1.12",
-    "raw-loader": "^0.5.1",
+    "raw-loader": "0.5.1",
     "rimraf": "2.5.4",
-    "string-replace-loader": "^1.0.3",
+    "string-replace-loader": "1.0.4",
     "style-loader": "0.13.1",
     "ts-loader": "0.8.2",
-    "typescript": "^1.8.10",
-    "typings": "^1.3.3",
+    "typescript": "1.8.10",
+    "typings": "1.3.3",
     "webpack": "1.13.2",
-    "webpack-dev-server": "1.15.1",
-    "webpack-fail-plugin": "^1.0.5",
+    "webpack-dev-server": "1.16.1",
+    "webpack-fail-plugin": "1.0.5",
     "webpack-merge": "0.14.1"
   }
 }
