--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "html-loader": "0.4.4",
     "html-webpack-plugin": "2.22.0",
     "jasmine-core": "2.5.2",
+    "jshint-loader": "0.8.3",
     "karma": "1.3.0",
     "karma-jasmine": "1.0.2",
     "karma-phantomjs-launcher": "1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.8.0",
+    "less-loader": "2.2.3",
     "null-loader": "0.1.1",
     "phantomjs-prebuilt": "2.1.12",
     "raw-loader": "0.5.1",
@@ -48,6 +50,7 @@
     "ts-loader": "0.8.2",
     "typescript": "1.8.10",
     "typings": "1.3.3",
+    "url-loader": "0.5.7",
     "webpack": "1.13.2",
     "webpack-dev-server": "1.16.1",
     "webpack-fail-plugin": "1.0.5",
